--- a/style.css
+++ b/style.css
@@ -70,6 +70,16 @@ select {
     margin-bottom: 10px;
 }
 
+#profiles {
+    margin-top: 2em;
+}
+
+.profile-card {
+    background: #f5f5f5;
+    padding: 1em;
+    border-radius: 4px;
+    margin-bottom: 1em;
+}
 #map {
     width: 100%;
     height: 80vh;
