Add like tracking and display

--- a/style.css
+++ b/style.css
@@ -252,3 +252,9 @@ select {
 #photo-preview {
     margin-top: 1em;
 }
+
+#like-list {
+    list-style-type: disc;
+    margin-top: 1em;
+    padding-left: 1.2em;
+}
