--- a/style.css
+++ b/style.css
@@ -185,6 +185,27 @@ select {
     margin-bottom: 0.5em;
 }
 
+#messages-container {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+    max-width: 300px;
+}
+
+.message-thread {
+    background: #fff;
+    padding: 1em;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    margin-bottom: 1em;
+}
+
+.message-thread textarea {
+    width: 100%;
+    height: 60px;
+    margin-top: 0.5em;
+}
+
 .modal-overlay {
     position: fixed;
     top: 0;
