--- a/style.css
+++ b/style.css
@@ -229,6 +229,19 @@ select {
     margin-bottom: 0.5em;
 }
 
+#message-modal textarea {
+    width: 100%;
+    height: 80px;
+    margin-bottom: 0.5em;
+    background: #222;
+    color: #fff;
+    border: 1px solid #555;
+    border-radius: 4px;
+}
+#message-modal .button {
+    width: 100%;
+}
+
 #messages-container {
     position: absolute;
     top: 1em;
